fix(schedule): z-index for beyond budget tasks

--- a/src/app/features/schedule/schedule/schedule.component.scss
+++ b/src/app/features/schedule/schedule/schedule.component.scss
@@ -227,6 +227,7 @@ header {
 }
 
 .excess-entries {
+  z-index: 10;
   position: sticky;
   bottom: -2px;
   max-height: 100px;
